# brantham-vault

./: .gitignore  .stignore  AGENTS.md  M_AND_A_MASTER_INDEX.md  README.md  compact-deals-loop-2-2026-06-13.md  compact-deals-loop-3-2026-06-13.md  compact-deals-loop-4-2026-06-13.md  compact-deals-verification-2026-06-13.md  daily-2026-06-12.md  deep-learning-graph.canvas  m-and-a-checklist.md  m-and-a-risk-framework.md  ma-valuation-metrics.md  opencode.jsonc  post-merger-integration-checklist.md  sync-brain.sh  sync-pull.sh  sync-push.sh  target-analysis-template.md  update.sh  valuation-comparables-template.md
.claude/: settings.json  settings.local.json
.stfolder/: syncthing-folder-b1036e.txt
04_Templates/: DD_Checklist_Full.md  Terme_Sheet_Template.md  acquirer-scoring-matrix.md  deal_structure_comparison.md  due_diligence_kpi_dashboard.md  m_and_a_onepager_cheatsheet.txt  m_and_a_timeline_critical_path.md  nda_template_annotated.md  post_acquisition_tech_scorecard.md
06_Playbooks/: 00_Acquisition_Criteria.md  (+15 more)
twitter/system/: .env  .env.example  analyst.py  bird_enricher.py  config.py  data_collector.py  db.py  deep_analysis.py  deep_scrape.py  dna_batch.py  drafter.py  embedder.py  engagement_model.py  main.py  mass_collector.py  orchestrator.py  poster.py  pyproject.toml  reply_finder.py  reply_guy.py  reply_style_analyzer.py  scraper.py  setup-crons.sh  style_analyzer.py  telegram_sender.py  tracker.py
twitter/system/models/: engagement_net.py  style_fingerprint.py  topic_model.py
twitter/system/pipeline/: features.py  scorer.py  vector_store.py
(+3375 files in other folders)
